<resources>
    <string name="app_name">ICALL</string>
    <string name="action_settings">Settings</string>
    <string name="contact_first">First name:</string>
    <string name="contact_last">Last name:</string>
    <string name="contact_phone">Phone number:</string>
    <string name="contact_image">Choose image</string>
    <string name="choose_image">Click to choose image</string>
    <string name="add_contact">Create new contact</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="favorite">Favorite</string>
    <string name="contact_email">Email</string>
    <string name="contact_line">Line</string>
    <string name="name">Name</string>
    <string name="title_activity_maps">Map</string>
    <string name="location">Location</string>
    <string name="picture">Picture</string>
    <string name="info">info</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>


    <string name="hello_world">Hello world!</string>


    <string name="title_activity_create_note">Create Note</string>

    <string name="title">Title</string>

    <string name="detail">Content</string>


    <string-array name="note_type">

        <item>Normal</item>

        <item>Standard</item>

        <item>Urgent</item>
        <item>Notify</item>

    </string-array>

    <string name="title_activity_information">Information</string>

    <string name="title_activity_edit__note">Edit Note</string>

    <string name="New">Create New Note</string>

    <string name="back">Back to Main</string>


    <string name="discard">Discard Note</string>

    <string name="note_type_text">Choose Note Type:</string>

    <string name="title_activity_alert">Alert</string>

    <string name="Not_Set">Not Set</string>

    <string name="hour_minutes">HH:mm</string>

    <string name="alert_title">title</string>
    <string name="alert_content">content</string>
    <string name="alert_contactname">contactName</string>

    <string name="set_notify">Set Notification</string>
    <string name="added_alert">An Alert can be added</string>
    <string name="notify">You can recieve notifications</string>
    <string name="rodId">rowID</string>

    <string name="Alertnotifty">"Alert: "</string>

    <string name="alerttitle">title</string>

    <string name="delete_title">Delete Selected Task</string>

    <string name="delete_message">Are you sure?</string>

    <string name="yes">Yes</string>

    <string name="no">No</string>

    <string name="rodID">rowID</string>

    <string name="rowID">rowID</string>

    <string name="row_id">rowID</string>

    <string name="intent_row_id">rowID</string>

    <string name="row_id_long">rowID</string>

    <string name="alarm_active">An Alert can be added!</string>

    <string name="row_id_log">rowID</string>

    <string name="title_hint">Enter Task</string>

    <string name="hint_description">Enter Task Description</string>

    <string name="set_alert">Set Alert</string>

    <string name="textview_date">Select Date</string>

    <string name="txt_time">Enter Time:</string>

    <string name="txt_edit_hint">Enter Title</string>

    <string name="detail_hint">Enter Description</string>

    <string name="type_note">Note Type:</string>

    <string name="view_title">Large Text</string>

    <string name="view_detail">Medium Text</string>

    <string name="note_type">Medium Text</string>

    <string name="type_list_entry">Date</string>

    <string name="time_vie">testtime</string>

    <string name="alarmtext">Alert: </string>
    <string name="alarmtextTitle">""</string>
    <string name="alarmtextContent">""</string>
    <string name="alarmtextName">""</string>

    <string name="dateformate">dd/MM/yyyy</string>

    <string name="Not_Set_Alert">Not Set</string>

    <string name="ok">Ok</string>

    <string name="title_msg">title</string>
    <string name="content_msg">content</string>
    <string name="content_name">contactName</string>

    <string name="titttle">title</string>
    <string name="contenttt">content</string>
    <string name="contactnamee">contactName</string>
    <string name="conimage">image</string>

    <string name="APPNAME">ICALL</string>

    <!-- #########################-->

    <string name="title_activity_add_reminder">Add Reminder</string>
    <string name="title_activity_edit_reminder">Edit Reminder</string>
    <string name="title_activity_licenses">Licenses</string>

    <string name="add_reminder">Reminder</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_off">Off</string>
    <string name="repeat_no">Repetition Interval </string>
    <string name="repeat_type">Type of Repetitions</string>

    <string name="action_discard_reminder">Discard Reminder</string>
    <string name="action_save_reminder">Save Reminder</string>

    <string name="no_reminders">Click on the plus button below to begin creating your reminders!</string>


</resources>
