<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingBottom="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Edit contact data"
            android:textSize="15sp"
            android:gravity="center"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/edit_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_person"
            app:civ_border_color="#bfbfc1"
            app:civ_border_width="3dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/contact_first"/>
        <EditText
            android:id="@+id/edit_first_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:height="50dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="30dp"
            android:text="@string/contact_last"/>
        <EditText
            android:id="@+id/edit_last_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:height="50dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="30dp"
            android:text="@string/contact_phone"/>
        <EditText
            android:id="@+id/edit_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="phone"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:height="50dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="30dp"
            android:text="@string/contact_email"/>
        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:height="50dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="30dp"
            android:text="@string/contact_line"/>
        <EditText
            android:id="@+id/edit_line"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:height="50dp"
            />

        <CheckBox
            android:id="@+id/edit_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite" />

        <!--<CheckBox
            android:id="@+id/edit_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite" />
         -->

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:id="@+id/edit_save"
            android:text="@string/save"/>

    </LinearLayout>

</ScrollView>