<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingTop="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Edit user data"
            android:textSize="15sp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/editimageUserEdit"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_person"
            app:civ_border_color="#bfbfc1"
            app:civ_border_width="3dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/contact_first" />

        <EditText
            android:id="@+id/edit_first_nameUserEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="5dp"
            android:height="50dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="30dp"
            android:text="@string/contact_last" />

        <EditText
            android:id="@+id/edit_last_nameUserEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="5dp"
            android:height="50dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="30dp"
            android:text="@string/contact_phone" />

        <EditText
            android:id="@+id/edit_phoneUserEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="5dp"
            android:height="50dp"
            android:inputType="phone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="30dp"
            android:text="@string/contact_email" />

        <EditText
            android:id="@+id/edit_emailUserEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="5dp"
            android:height="50dp"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="30dp"
            android:text="@string/contact_line" />

        <EditText
            android:id="@+id/edit_lineUserEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="5dp"
            android:height="50dp" />

        <CheckBox
            android:id="@+id/edit_favoriteUserEdit"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/favorite" />


        <Button
            android:id="@+id/edit_contactUserEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="EDIT USER DATA" />

    </LinearLayout>

</ScrollView>