<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="taweesak.com.myappcontactsnotify.Appointment.View_Note">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView3" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_margin="5dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:showDividers="middle"
            android:layout_alignParentTop="true"
            android:weightSum="1">
            <TextView
                android:textSize="15sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="View note"
                android:gravity="center"
                />


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/mv_ViewNote"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_person"
                app:civ_border_color="#bfbfc1"
                app:civ_border_width="3dp" />




            <TextView
                android:id="@+id/tv_name1"
                android:text="name"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/view_title"
                android:gravity="center"
                android:textColor="@android:color/holo_blue_light"
                android:id="@+id/title"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/holo_red_light"></View>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/view_detail"
                android:id="@+id/detail"
                android:layout_margin="5dp"
                android:textColor="@android:color/holo_orange_dark"
                android:layout_weight="0.47" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/holo_red_light"></View>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.27"
                android:layout_marginTop="100dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/note_type_text"
                    android:textStyle="bold"
                    android:textColor="@android:color/holo_blue_light"
                    android:id="@+id/note_type_text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/note_type"
                    android:textColor="@android:color/holo_orange_dark"
                    android:id="@+id/note_type_ans"
                    android:paddingLeft="10dp"
                    android:layout_gravity="center_horizontal" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.20"
                android:layout_marginTop="100dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginRight="100dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/alarmtext"
                        android:textColor="@android:color/holo_blue_light"
                        android:id="@+id/alarm_text" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/alertvalue"
                        android:paddingLeft="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/datevalue"
                        android:layout_marginLeft="20dp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
