<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="taweesak.com.myappcontactsnotify.Appointment.Edit_Note">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2" >


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:textSize="15sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Edit note"
                android:gravity="center"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/mv_edit"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_person"
                app:civ_border_color="#bfbfc1"
                app:civ_border_width="3dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_weight="1"/>


            <TextView
                android:id="@+id/tv_name2"
                android:text="name"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txttitle"
                android:maxLength="30"
                android:text="@string/txt_edit_hint"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:singleLine="true"
                android:editable="true" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/scrollView5" >

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/description"
                    android:text="@string/detail_hint"
                    android:layout_below="@+id/txttitle"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:singleLine="false"
                    android:editable="true"
                    android:lines="5" />
            </ScrollView>

            <!--   <CheckBox
                   android:id="@+id/cancel_checkBox"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/favorite" />
               <TextView
                   android:id="@+id/check_box"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content" /> -->


               <LinearLayout
                   android:orientation="vertical"
                   android:layout_width="fill_parent"
                   android:layout_height="wrap_content"
                   android:layout_below="@+id/spinnerNoteType"
                   android:layout_alignParentRight="true"
                   android:layout_alignParentEnd="true"
                   android:layout_alignParentLeft="true"
                   android:layout_alignParentStart="true">



                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textAppearance="?android:attr/textAppearanceSmall"
                       android:text="@string/textview_date"
                       android:id="@+id/txt_selectdate" />

                   <DatePicker
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:id="@+id/datePicker2"
                       android:layout_below="@+id/chkbox"
                       android:layout_centerHorizontal="true"
                       android:calendarViewShown="false"
                       android:layout_gravity="center_horizontal" />

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textAppearance="?android:attr/textAppearanceSmall"
                       android:text="@string/txt_time"
                       android:id="@+id/txt_selecttime" />

                   <TimePicker
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:id="@+id/timePicker2"
                       android:layout_gravity="center_horizontal" />
               </LinearLayout>
           </LinearLayout>
       </ScrollView>

   </RelativeLayout>
